# QPyIPC

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
demo/: CMakeLists.txt  main.cpp
demo/mod/: .gitignore
demo/mod/B/: manifest.json
demo/mod/B/TestMod/: Client.py  modMain.py
demo/mod/B/TestMod/QuModLibs/: Client.py  QuMod.py  Server.py  UI.py  Util.py
demo/mod/B/TestMod/ipcLibs/: mcTools.py
demo/mod/R/: manifest.json
include/: pyipc.hpp
python/: pyipc.py
src/: pyipc.cpp
